complete refactor of the built in functions to asynchronous execution, for any functions